2010-06-19 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: filled SERVER_CONF variable in the 'server' array with value generated
    by the build system of the directory holding the conf files. 
    This fulfills a TODO comment in the code. The array server is undocumented and is not clear if it was
    added for the benefit of the programmer or for debugging of the module.
    * src/apache-2/mod_rivet.h: structure definitions beautified and aligned.
  
2010-05-14 Massimo Manghi <mxmanghi@apache.org>
    * BUGS,INSTALL,Changelog: small improvements in the documentation

2010-05-14 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/install-sh: the install-sh script is replaced with the same script shipped with automake-1.11

2010-05-13 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-1/TclWebapache.c: call to ap_send_http_headers centralized in TclWeb_SendHeaders
    * src/apache-2/TclWebapache.c: bugfix for string assigned to the content_type field that has to
	be duplicated to preserve from memory deallocation by Tcl, includes to modules from apache APR
	library added, call to ap_send_http_headers centralized in TclWeb_SendHeaders
 
2010-04-29 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_multipart_buffer.c: Add include <apr_string.h> to silence a compilation
    warning.
    * src/apache-2/apache_multipart_buffer.h: set svn property to enable $Id: keyword expansion
    * doc/xml/session.xml: Commented line about a 'CookieDomain' command of Session that appears to
    be non coded yet. To be added to the TODO file.

2010-04-29 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac,VERSION: Pre-branching operations: AC_INIT now uses 2.0.0 as version number
    to be used across the build system. Also the file VERSION has been updated to reflect the
    release number.

2010-04-27 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-1/TclWebapache.c,src/apache-1/rivetCore.c,src/apache-1/mod_rivet.c,