@@ -8,7 +8,7 @@
 #
 
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST=LICENSE contrib debian doc rivet win/nmakehlp.c src/testing.c src/TclWebcgi.c
+EXTRA_DIST = LICENSE contrib debian doc rivet win/nmakehlp.c src/testing.c src/TclWebcgi.c
 SUBDIRS = src doc
 RIVETLIB_DESTDIR = @RIVET_TCL_TARGET@
 
@@ -18,7 +18,9 @@ libtool: $(LIBTOOL_DEPS)
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(RIVETLIB_DESTDIR)
 	cp -r rivet/* $(DESTDIR)$(RIVETLIB_DESTDIR)
-	-( cd  $(DESTDIR)$(RIVETLIB_DESTDIR) ; echo 'eval pkg_mkIndex -verbose [pwd] init.tcl [glob [file join packages * *.tcl] [file join *[info sharedlibextension]]]' | @TCLSH_PROG@ ; )
+	-(  cd  $(DESTDIR)$(RIVETLIB_DESTDIR); \
+	    echo 'eval file delete [glob [file join packages * pkgIndex.tcl]] pkgIndex.tcl' | @TCLSH_PROG@ ; \
+	    echo 'eval pkg_mkIndex -verbose [pwd] init.tcl [glob [file join packages * *.tcl] [file join *[info sharedlibextension]]]' | @TCLSH_PROG@ ; )
 
 uninstall-local:
 	rm -fr $(DESTDIR)$(RIVETLIB_DESTDIR)
